# lexicore-compiler-atcd

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  README.md  assembly_gen.cpp  assembly_gen.h  ast.cpp  ast.h  compiler.cpp  compiler.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  tac.cpp  tac.h  token.cpp  token.h  type_checker.cpp  type_checker.h  types.h
dashboard/: app.py  compiler_pipeline.py
dashboard/static/css/: style.css
dashboard/static/js/: codeGenerator.js  script.js
dashboard/templates/: index.html
